--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,7 +156,7 @@
     <string name="module_bhop_display_name">Bhop</string>
     <string name="module_fly_display_name">Fly</string>
     <string name="module_tap_teleport_display_name">TapTP</string>
-    <string name="scaffold">Scaffold Test</string>
+    <string name="module_scaffold_display_name">Scaffold Test</string>
     <string name="module_high_jump_display_name">HighJump</string>
     <string name="module_jet_pack_display_name">JetPack</string>
     <string name="module_motion_fly_display_name">MotionFly</string>
